<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidHomework_1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
	<string name="name">姓名</string>
	<string name="password">密码</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="exit">退出</string>
	<string name="confirm">确认</string>
	<string name="mail">邮箱</string>
	<string name="stuid">学号</string>
	<string name="birthday">生日</string>
	<string name="address">地址</string>
	<string name="back">返回</string>
	<string name="password_resure">确认密码</string>
	<string name="sex">性别</string>
	<string name="male">男</string>
	<string name="female">女</string> 
	<string name="phone">手机号</string>
	<string name="todb">To DB</string>
	<string name="readdb">Read DB</string>
	<string name="submit">提交</string>
	<string name="result">注册信息结果</string>
	<string name="please_select_date">请选择日期</string>
</resources>
