<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:background="#a0a002"
    android:gravity="center" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<LinearLayout 
	    android:id="@+id/layout_login"
		android:orientation="vertical"
		android:layout_gravity="center"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="#4aa0a0"
	    >
    
<!--     android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
        android:background="#004433"
    -->
    
    <LinearLayout 
		style="@style/style_sub_layout"
        android:id="@+id/layout_name"  >
        
        
<!--             android:layout_width="50dp"
	        android:layout_height="50dp" -->
	        
        <TextView
            android:text="@string/name"
            android:layout_width="30dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:id="@+id/name_label" />
        
        <EditText    
			android:layout_width="150dp"      
			android:layout_height="wrap_content"  
            android:inputType="text" 
            android:id="@+id/name_edit" />
            </LinearLayout>
            
    <LinearLayout 
        android:id="@+id/layout_password"
		style="@style/style_sub_layout"
        >
        
        
<!--         android:background="#00dd00" -->
        
        <TextView 
            android:text="@string/password"
            android:layout_width="30dp"
            android:gravity="center"
            android:layout_height="match_parent"              
            android:id="@+id/password_label" />
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password_edit"   
            />
        
<!--             android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"  
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"    --> 
    </LinearLayout>
    <LinearLayout 
		style="@style/style_sub_layout"
        android:id="@+id/layout_button"
        android:background="#a0a0a0"
        >
        <Button android:layout_width="50dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:id="@+id/button_register"
            android:text="@string/register"/>
        <Button android:layout_width="80dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/button_login"
            android:text="@string/login"
            />
        <Button android:layout_width="50dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:id="@+id/button_exit"
            android:text="@string/exit"
            android:onClick="exit"
            />
        
    </LinearLayout>
    
    </LinearLayout>
    
    
</LinearLayout>
